--- a/layout2/src/index.html
+++ b/layout2/src/index.html
@@ -139,12 +139,12 @@
                         <p class="article__text2">Susan Sims, Interaction Designer at XYZ</p>
                 </div>
                 <div class="slider__panels">
-                    <div class="panels__sorry"></div>
                     <input type="radio" name="action2" id="switches_mod1" style="display: none;">
                     <input type="radio" name="action2" id="switches_mod2" style="display: none;">
                     <input type="radio" name="action2" id="switches_mod3" style="display: none;">
                     <input type="radio" name="action2" id="switches_mod4" style="display: none;">
                     <input type="radio" name="action2" id="switches_mod5" style="display: none;">
+                    <div class="panels__sorry">Sorry, i didn't come up with anythig</div>
                     <label class="panels__panel panel_mod1" for="switches_mod1"></label>
                     <label class="panels__panel panel_mod2" for="switches_mod2"></label>
                     <label class="panels__panel panel_mod3" for="switches_mod3"></label>
